--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                     <a href="https://www.codechef.com/users/nitinkumarjha" target="_blank" class="px-4 py-2 bg-gradient-to-r from-green-400 to-blue-500 text-white rounded-full shadow hover:scale-105 transition-transform">CodeChef</a>
                     <a href="https://codolio.com/profile/nitinjha" target="_blank" class="px-4 py-2 bg-gradient-to-r from-pink-500 to-purple-600 text-white rounded-full shadow hover:scale-105 transition-transform">Codolio</a>
                     <a href="https://www.geeksforgeeks.org/user/nitinkuman8xe/" target="_blank" class="px-4 py-2 bg-gradient-to-r from-gray-700 to-gray-900 text-white rounded-full shadow hover:scale-105 transition-transform">GeeksforGeeks</a>
+                    <a href="https://codeforces.com/profile/nitinkumarjha" target="_blank" class="px-4 py-2 bg-gradient-to-r from-yellow-400 to-orange-500 text-white rounded-full shadow hover:scale-105 transition-transform">Codeforces</a>
                 </div>
             </div>
 
